<?xml version="1.0"?>
<package format="2">
  <name>mech_ros_msgs</name>
  <version>0.0.0</version>
  <description>The mech_ros_msgs package</description>
  <maintainer email="vavrapatrik@email.cz">Patrik Vavra</maintainer>

  <license>BSD</license>
  <author email="vavrapatrik@email.cz">Patrik Vavra</author>
  <url type="repository">https://github.com/Vpatrik/mech_ros_msgs.git</url>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
